hphp/test/slow/reified_generics/error-parse-reify-4.php.expectf
Fatal error: Reify keyword can only appear at function or class type parameter position in %s on line 3
